Fixing alignment

--- a/css/grid.css
+++ b/css/grid.css
@@ -23,12 +23,12 @@
 
 #one {
     float: left;
-    padding-left: 150px;
+    padding-left: 125px;
 }
 
 #two {
     float: right;
-    padding-right: 150px;
+    padding-right: 125px;
     padding-top: 10px;
 }
 
